# CTR-ModSDK

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .recursive  README.md  config.json  disc.json  flake.nix  lectures.txt  nop.s  structure.txt  weird.c
mods/Windows/OnlineCTR/Network_PC/Client/: CL_main.c  CL_main.cpp  CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  Client.vcxproj.filters.rej  DSPINE.h  DeferredMem.cpp  DeferredMem.h  Util.cpp  Util.h  default.nix  settings.txt
mods/Windows/OnlineCTR/Network_PC/Server/: .gitignore  CMakeLists.txt  Dockerfile  README.md  SV_helper.c  SV_main.c  Server.vcxproj  Server.vcxproj.filters  buildDocker.sh  compose.yml  default.nix  entrypoint.sh
mods/Windows/libs/LibOVR_v32/: CMakeLists.txt
mods/Windows/libs/LibOVR_v32/Include/: OVR_CAPI.h  OVR_Version.h
mods/Windows/libs/LibOVR_v32/Shim/: OVR_CAPI_Prototypes.h  OVR_CAPI_Util.cpp
rebuild_PC/: .gitignore  CMakeLists.txt  CrashTeamRacingPC.c  CrashTeamRacingPC.sln  CrashTeamRacingPC.vcxproj  CrashTeamRacingPC.vcxproj.filters  Makefile  PsyCross.lib  PsyCross.nix  README.md  WindowsInputTEMPORARY.c  build-all.sh  build-mingw-clang.nix  build-mingw-gcc.nix  build-native-clang.nix  build-native-gcc.nix  default.nix  gen_vs2022.bat  premake5.lua
rebuild_PC/CodeBlocksProject/: .gitignore  CrashTeamRacingPC.cbp  CrashTeamRacingPC.depend  CrashTeamRacingPC.layout
rebuild_PC/PsyCross/: .gitignore  CMakeLists.txt  README.md
rebuild_PC/PsyCross/include/PsyX/: PsyX_config.h  PsyX_globals.h  PsyX_render.h
rebuild_PC/PsyCross/include/PsyX/common/: pgxp_defs.h
rebuild_PC/PsyCross/include/psx/: inline_c.h  kernel.h  libcd.h  libetc.h  libgpu.h  libgte.h  libpress.h  libspu.h  types.h
rebuild_PC/PsyCross/src/: PsyX_main.cpp
rebuild_PC/PsyCross/src/gpu/: PsyX_GPU.cpp  PsyX_GPU.h  font.h
rebuild_PC/PsyCross/src/gte/: PsyX_GTE.cpp
rebuild_PC/PsyCross/src/pad/: PsyX_pad.cpp  PsyX_pad.h
rebuild_PC/PsyCross/src/psx/: LIBCD.C  LIBETC.C  LIBGPU.C  LIBGTE.C  LIBSPU.C
rebuild_PC/PsyCross/src/render/: PsyX_render.cpp
rebuild_PC/Release/: CrashTeamRacingPC.exe.recipe  CrashTeamRacingPC.exp  CrashTeamRacingPC.iobj  CrashTeamRacingPC.ipdb  CrashTeamRacingPC.lib  CrashTeamRacingPC.vcxproj.FileListAbsolute.txt
rebuild_PC/Release/CrashTea.a4e0e91b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CrashTeamRacingPC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
rebuild_PC/VisualStudioProject/: CrashTeamRacingPC.sln  CrashTeamRacingPC.vcxproj  CrashTeamRacingPC.vcxproj.filters  README.md
rebuild_PC/lib32/: PsyCross.lib
rebuild_PC/lib32/include/PsyX/: PsyX_config.h  PsyX_public.h  PsyX_render.h
rebuild_PC/lib32/include/PsyX/common/: glad.h
rebuild_PC/lib32/include/psx/: kernel.h  libapi.h  libgpu.h  libgte.h  libmcrd.h
rebuild_PC/libValkyrie/: .gitignore  CMakeLists.txt
rebuild_PC/libValkyrie/Core/: EMULATOR.C  EMULATOR.H  EMULATOR_GLOBALS.H  EMULATOR_VERSION.H
rebuild_PC/libValkyrie/Core/Audio/: EMULATOR_SPU.C  EMULATOR_SPU.H
rebuild_PC/libValkyrie/Core/FileSystem/: EMULATOR_FILESYSTEM_COMMON.C  EMULATOR_FILESYSTEM_COMMON.H
rebuild_PC/libValkyrie/Core/FileSystem/Emscripten/: EMULATOR_FILESYSTEM_EMSCRIPTEN.C  EMULATOR_FILESYSTEM_EMSCRIPTEN.H
rebuild_PC/libValkyrie/Core/FileSystem/Windows/: EMULATOR_FILESYSTEM_WINDOWS.C  EMULATOR_FILESYSTEM_WINDOWS.H
rebuild_PC/libValkyrie/Core/Input/: EMULATOR_INPUT.C  EMULATOR_INPUT.H
rebuild_PC/libValkyrie/Core/Public/: EMULATOR_PUBLIC.H
rebuild_PC/libValkyrie/Core/Render/: EMULATOR_RENDER_COMMON.C  EMULATOR_RENDER_COMMON.H
rebuild_PC/libValkyrie/Core/Render/D3D11/: EMULATOR_RENDER_D3D11.C  EMULATOR_RENDER_D3D11.H
rebuild_PC/libValkyrie/Core/Render/D3D12/: EMULATOR_RENDER_D3D12.C  EMULATOR_RENDER_D3D12.H
rebuild_PC/libValkyrie/Core/Render/D3D9/: EMULATOR_RENDER_D3D9.C  EMULATOR_RENDER_D3D9.H
rebuild_PC/libValkyrie/Core/Render/OGL/: EMULATOR_RENDER_OGL.C  EMULATOR_RENDER_OGL.H
rebuild_PC/libValkyrie/Core/Render/OGLES/: EMULATOR_RENDER_OGLES.C  EMULATOR_RENDER_OGLES.H
rebuild_PC/libValkyrie/Core/Render/Vulkan/: EMULATOR_RENDER_VULKAN.C  EMULATOR_RENDER_VULKAN.H
rebuild_PC/libValkyrie/Core/Render/XED3D/: EMULATOR_RENDER_XED3D.C  EMULATOR_RENDER_XED3D.H
rebuild_PC/libValkyrie/Core/Setup/Game/: EMULATOR_SETUP.H  GAME_VERSION.H
rebuild_PC/libValkyrie/Core/Setup/Platform/: EMULATOR_ARCHITECTURE_SETUP.H  EMULATOR_PLATFORM_INCLUDES.H  EMULATOR_PLATFORM_SETUP.H
rebuild_PC/libValkyrie/Core/Utility/: EMULATOR_UTILITY_COMMON.H
rebuild_PC/libValkyrie/Core/Utility/D3D11/: EMULATOR_UTILITY_D3D11.C  EMULATOR_UTILITY_D3D11.H
rebuild_PC/libValkyrie/Core/Utility/D3D12/: EMULATOR_UTILITY_D3D12.C  EMULATOR_UTILITY_D3D12.H
rebuild_PC/libValkyrie/Core/Utility/D3D9/: EMULATOR_UTILITY_D3D9.C  EMULATOR_UTILITY_D3D9.H
rebuild_PC/libValkyrie/Core/Utility/OGL/: EMULATOR_UTILITY_OGL.C  EMULATOR_UTILITY_OGL.H
rebuild_PC/libValkyrie/Core/Utility/OGLES/: EMULATOR_UTILITY_OGLES.C  EMULATOR_UTILITY_OGLES.H
rebuild_PC/libValkyrie/Platform/: Android.cmake  Apple.cmake  Durango.cmake  Emscripten.cmake  Linux.cmake  Win32.cmake  Win64.cmake  WindowsStore.cmake
rebuild_PC/libValkyrie/Platform/Android/: build.gradle  settings.gradle
rebuild_PC/libValkyrie/Platform/Durango/: Generate-Project-Files.bat
rebuild_PC/libValkyrie/Platform/Emscripten/: Generate-Project-Files-GHA.bat  Generate-Project-Files.bat  Run.bat
rebuild_PC/libValkyrie/Platform/Linux/: Generate-Project-Files-Win32.sh
rebuild_PC/libValkyrie/Platform/Win32/: Generate-Project-Files.bat
rebuild_PC/libValkyrie/Platform/Win64/: Generate-Project-Files.bat
rebuild_PC/libValkyrie/Platform/WindowsStore/: Generate-Project-Files.bat
rebuild_PC/libValkyrie/Shaders/: CMakeLists.txt  blit_shader.hlsl  gte_shader_16.hlsl  gte_shader_4.hlsl  gte_shader_8.hlsl
rebuild_PC/libValkyrie/Shaders/D3D11/: CMakeLists.txt
rebuild_PC/libValkyrie/Shaders/D3D12/: CMakeLists.txt
rebuild_PC/libValkyrie/Shaders/D3D9/: CMakeLists.txt
rebuild_PC/libValkyrie/Shaders/Vulkan/: CMakeLists.txt
(+4456 files in other folders)
